Remove bin/ folder and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,44 @@
-target/ 
-bin/ 
-.idea/ 
-*.iml 
-*.class 
-*.log 
-.settings/ 
-.classpath 
-.project 
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+
+# Eclipse
+bin/
+.settings/
+.classpath
+.project
+.factorypath
+
+# IntelliJ IDEA
+.idea/
+*.iml
+*.iws
+*.ipr
+out/
+
+# VS Code
+.vscode/
+
+# Compiled
+*.class
+
+# Logs
+*.log
+logs/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Database
+*.db
+*.sqlite
+
+# Spring Boot
+application-local.properties
+application-dev.properties
